--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     	<version>4.1.2</version>
 	</dependency>
 	<dependency>
+    		<groupId>org.apache.poi</groupId>
+    		<artifactId>poi-ooxml</artifactId>
+    		<version>4.1.2</version>
+		</dependency>
+	<dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
     	<version>3.4.0</version>
