--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,20 @@
         <artifactId>selenium-java</artifactId>
     	<version>3.4.0</version>
 	</dependency>
+	<dependency>
+    	<groupId>com.aventstack</groupId>
+    	<artifactId>extentreports</artifactId>
+    	<version>4.1.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>6.10</version>
+	</dependency>
 	
+	
+		
+		
 	
   </dependencies>
 </project>
