--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,21 @@
     	<artifactId>extentreports</artifactId>
     	<version>4.1.3</version>
 	</dependency>
+	
+<!--
+    <dependency>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports</artifactId>
+        <version>3.1.5</version>
+    </dependency>
+
+	<dependency>
+    	<groupId>com.relevantcodes</groupId>
+    	<artifactId>extentreports</artifactId>
+    	<version>2.41.2</version>
+	</dependency>
+-->
+	
 	<dependency>
 		<groupId>org.testng</groupId>
 		<artifactId>testng</artifactId>
